Libretro.NET.Generator/libretro.h


#define bool unsigned char
typedef void (RETRO_CALLCONV *retro_proc_address_t)(void);
enum retro_log_level
{
   RETRO_LOG_DEBUG = 0,
   RETRO_LOG_INFO,
   RETRO_LOG_WARN,
   RETRO_LOG_ERROR,
   RETRO_LOG_DUMMY = INT_MAX
};
typedef void (RETRO_CALLCONV *retro_location_set_interval_t)(unsigned interval_ms,
      unsigned interval_distance);
typedef bool (RETRO_CALLCONV *retro_location_start_t)(void);
typedef void (RETRO_CALLCONV *retro_location_stop_t)(void);
typedef bool (RETRO_CALLCONV *retro_location_get_position_t)(double *lat, double *lon,
      double *horiz_accuracy, double *vert_accuracy);
typedef void (RETRO_CALLCONV *retro_location_lifetime_status_t)(void);
struct retro_location_callback
{
   retro_location_start_t         start;
   retro_location_stop_t          stop;
   retro_location_get_position_t  get_position;
   retro_location_set_interval_t  set_interval;
   retro_location_lifetime_status_t initialized;
   retro_location_lifetime_status_t deinitialized;
};
enum retro_rumble_effect
{
   RETRO_RUMBLE_STRONG = 0,
   RETRO_RUMBLE_WEAK = 1,
   RETRO_RUMBLE_DUMMY = INT_MAX
};
typedef bool (RETRO_CALLCONV *retro_set_rumble_state_t)(unsigned port,
      enum retro_rumble_effect effect, uint16_t strength);
struct retro_rumble_interface
{
   retro_set_rumble_state_t set_rumble_state;
};
typedef void (RETRO_CALLCONV *retro_audio_callback_t)(void);
typedef void (RETRO_CALLCONV *retro_audio_set_state_callback_t)(bool enabled);
struct retro_audio_callback
{
   retro_audio_callback_t callback;
   retro_audio_set_state_callback_t set_state;
};
typedef int64_t retro_usec_t;
typedef void (RETRO_CALLCONV *retro_frame_time_callback_t)(retro_usec_t usec);
struct retro_frame_time_callback
{
   retro_frame_time_callback_t callback;
   retro_usec_t reference;
};
typedef void (RETRO_CALLCONV *retro_audio_buffer_status_callback_t)(
      bool active, unsigned occupancy, bool underrun_likely);
struct retro_audio_buffer_status_callback
{
   retro_audio_buffer_status_callback_t callback;
};
typedef void (RETRO_CALLCONV *retro_hw_context_reset_t)(void);
typedef uintptr_t (RETRO_CALLCONV *retro_hw_get_current_framebuffer_t)(void);
typedef retro_proc_address_t (RETRO_CALLCONV *retro_hw_get_proc_address_t)(const char *sym);
enum retro_hw_context_type
{
   RETRO_HW_CONTEXT_NONE             = 0,
   RETRO_HW_CONTEXT_OPENGL           = 1,
   RETRO_HW_CONTEXT_OPENGLES2        = 2,
   RETRO_HW_CONTEXT_OPENGL_CORE      = 3,
   RETRO_HW_CONTEXT_OPENGLES3        = 4,
   RETRO_HW_CONTEXT_OPENGLES_VERSION = 5,
   RETRO_HW_CONTEXT_VULKAN           = 6,
   RETRO_HW_CONTEXT_DIRECT3D         = 7,
   RETRO_HW_CONTEXT_DUMMY = INT_MAX
};
struct retro_hw_render_callback
{
   enum retro_hw_context_type context_type;
   retro_hw_context_reset_t context_reset;
   retro_hw_get_current_framebuffer_t get_current_framebuffer;
   retro_hw_get_proc_address_t get_proc_address;
   bool depth;
   bool stencil;
   bool bottom_left_origin;
   unsigned version_major;
   unsigned version_minor;
   bool cache_context;
   retro_hw_context_reset_t context_destroy;
   bool debug_context;
};
typedef void (RETRO_CALLCONV *retro_keyboard_event_t)(bool down, unsigned keycode,
      uint32_t character, uint16_t key_modifiers);
struct retro_keyboard_callback
{
   retro_keyboard_event_t callback;
};
typedef bool (RETRO_CALLCONV *retro_set_eject_state_t)(bool ejected);
typedef bool (RETRO_CALLCONV *retro_get_eject_state_t)(void);
typedef unsigned (RETRO_CALLCONV *retro_get_image_index_t)(void);
typedef bool (RETRO_CALLCONV *retro_set_image_index_t)(unsigned index);
typedef unsigned (RETRO_CALLCONV *retro_get_num_images_t)(void);
struct retro_game_info;
typedef bool (RETRO_CALLCONV *retro_replace_image_index_t)(unsigned index,
      const struct retro_game_info *info);
typedef bool (RETRO_CALLCONV *retro_add_image_index_t)(void);
typedef bool (RETRO_CALLCONV *retro_set_initial_image_t)(unsigned index, const char *path);
typedef bool (RETRO_CALLCONV *retro_get_image_path_t)(unsigned index, char *path, size_t len);
typedef bool (RETRO_CALLCONV *retro_get_image_label_t)(unsigned index, char *label, size_t len);
struct retro_disk_control_callback
{
   retro_set_eject_state_t set_eject_state;
   retro_get_eject_state_t get_eject_state;
   retro_get_image_index_t get_image_index;
   retro_set_image_index_t set_image_index;
   retro_get_num_images_t  get_num_images;
   retro_replace_image_index_t replace_image_index;
   retro_add_image_index_t add_image_index;
};
struct retro_disk_control_ext_callback
{
   retro_set_eject_state_t set_eject_state;
   retro_get_eject_state_t get_eject_state;
   retro_get_image_index_t get_image_index;
   retro_set_image_index_t set_image_index;
   retro_get_num_images_t  get_num_images;
   retro_replace_image_index_t replace_image_index;
   retro_add_image_index_t add_image_index;
   retro_set_initial_image_t set_initial_image; 
   retro_get_image_path_t get_image_path;       
   retro_get_image_label_t get_image_label;     
};
enum retro_pixel_format
{
   RETRO_PIXEL_FORMAT_0RGB1555 = 0,
   RETRO_PIXEL_FORMAT_XRGB8888 = 1,
   RETRO_PIXEL_FORMAT_RGB565   = 2,
   RETRO_PIXEL_FORMAT_UNKNOWN  = INT_MAX
};
struct retro_message
{
   const char *msg;        
   unsigned    frames;     
};
enum retro_message_target
{
   RETRO_MESSAGE_TARGET_ALL = 0,
   RETRO_MESSAGE_TARGET_OSD,
   RETRO_MESSAGE_TARGET_LOG
};
enum retro_message_type
{
   RETRO_MESSAGE_TYPE_NOTIFICATION = 0,
   RETRO_MESSAGE_TYPE_NOTIFICATION_ALT,
   RETRO_MESSAGE_TYPE_STATUS,
   RETRO_MESSAGE_TYPE_PROGRESS
};
struct retro_message_ext
{
   const char *msg;
   unsigned duration;
   unsigned priority;
   enum retro_log_level level;
   enum retro_message_target target;
   enum retro_message_type type;
   char progress;
};
struct retro_input_descriptor
{
   unsigned port;
   unsigned device;
   unsigned index;
   unsigned id;
   const char *description;
};
struct retro_system_info
{
   const char *library_name;      
   const char *library_version;   
   const char *valid_extensions;  
   bool        need_fullpath;
   bool        block_extract;
};
struct retro_game_geometry
{
   unsigned base_width;    
   unsigned base_height;   
   unsigned max_width;     
   unsigned max_height;    
   float    aspect_ratio;  
};
struct retro_system_timing
{
   double fps;             
   double sample_rate;     
};
struct retro_system_av_info
{
   struct retro_game_geometry geometry;
   struct retro_system_timing timing;
};
struct retro_variable
{
   const char *key;
   const char *value;
};
struct retro_core_option_display
{
   const char *key;
   bool visible;
};
struct retro_core_option_value
{
   const char *value;
   const char *label;
};
struct retro_game_info
{
   const char *path;       
   const void *data;       
   size_t      size;       
   const char *meta;       
};