Libretro.NET/Bindings/RetroBindings.cs


    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public unsafe delegate bool retro_location_get_position_t([NativeTypeName("double *")] double* lat, [NativeTypeName("double *")] double* lon, [NativeTypeName("double *")] double* horiz_accuracy, [NativeTypeName("double *")] double* vert_accuracy);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void retro_location_lifetime_status_t();

    public partial struct retro_location_callback
    {
        [NativeTypeName("retro_location_start_t")]
        public IntPtr start;

        [NativeTypeName("retro_location_stop_t")]
        public IntPtr stop;

        [NativeTypeName("retro_location_get_position_t")]
        public IntPtr get_position;

        [NativeTypeName("retro_location_set_interval_t")]
        public IntPtr set_interval;

        [NativeTypeName("retro_location_lifetime_status_t")]
        public IntPtr initialized;

        [NativeTypeName("retro_location_lifetime_status_t")]
        public IntPtr deinitialized;
    }

    public enum retro_rumble_effect
    {
        RETRO_RUMBLE_STRONG = 0,
        RETRO_RUMBLE_WEAK = 1,
        RETRO_RUMBLE_DUMMY = 2147483647,
    }

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate bool retro_set_rumble_state_t([NativeTypeName("unsigned int")] uint port, [NativeTypeName("enum retro_rumble_effect")] retro_rumble_effect effect, [NativeTypeName("uint16_t")] ushort strength);

    public partial struct retro_rumble_interface
    {
        [NativeTypeName("retro_set_rumble_state_t")]
        public IntPtr set_rumble_state;
    }

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void retro_audio_callback_t();

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void retro_audio_set_state_callback_t(bool enabled);

    public partial struct retro_audio_callback
    {
        [NativeTypeName("retro_audio_callback_t")]
        public IntPtr callback;

        [NativeTypeName("retro_audio_set_state_callback_t")]
        public IntPtr set_state;
    }

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void retro_frame_time_callback_t([NativeTypeName("retro_usec_t")] long usec);

    public partial struct retro_frame_time_callback
    {
        [NativeTypeName("retro_frame_time_callback_t")]
        public IntPtr callback;

        [NativeTypeName("retro_usec_t")]
        public long reference;
    }

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void retro_audio_buffer_status_callback_t(bool active, [NativeTypeName("unsigned int")] uint occupancy, bool underrun_likely);

    public partial struct retro_audio_buffer_status_callback
    {
        [NativeTypeName("retro_audio_buffer_status_callback_t")]
        public IntPtr callback;
    }

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void retro_hw_context_reset_t();

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    [return: NativeTypeName("uintptr_t")]
    public delegate UIntPtr retro_hw_get_current_framebuffer_t();

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    [return: NativeTypeName("retro_proc_address_t")]
    public unsafe delegate IntPtr retro_hw_get_proc_address_t([NativeTypeName("const char *")] sbyte* sym);

    public enum retro_hw_context_type
    {
        RETRO_HW_CONTEXT_NONE = 0,
        RETRO_HW_CONTEXT_OPENGL = 1,
        RETRO_HW_CONTEXT_OPENGLES2 = 2,
        RETRO_HW_CONTEXT_OPENGL_CORE = 3,
        RETRO_HW_CONTEXT_OPENGLES3 = 4,
        RETRO_HW_CONTEXT_OPENGLES_VERSION = 5,
        RETRO_HW_CONTEXT_VULKAN = 6,
        RETRO_HW_CONTEXT_DIRECT3D = 7,
        RETRO_HW_CONTEXT_DUMMY = 2147483647,
    }

    public partial struct retro_hw_render_callback
    {
        [NativeTypeName("enum retro_hw_context_type")]
        public retro_hw_context_type context_type;

        [NativeTypeName("retro_hw_context_reset_t")]
        public IntPtr context_reset;

        [NativeTypeName("retro_hw_get_current_framebuffer_t")]
        public IntPtr get_current_framebuffer;

        [NativeTypeName("retro_hw_get_proc_address_t")]
        public IntPtr get_proc_address;

        public bool depth;

        public bool stencil;

        public bool bottom_left_origin;

        [NativeTypeName("unsigned int")]
        public uint version_major;

        [NativeTypeName("unsigned int")]
        public uint version_minor;

        public bool cache_context;

        [NativeTypeName("retro_hw_context_reset_t")]
        public IntPtr context_destroy;

        public bool debug_context;
    }

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void retro_keyboard_event_t(bool down, [NativeTypeName("unsigned int")] uint keycode, [NativeTypeName("uint32_t")] uint character, [NativeTypeName("uint16_t")] ushort key_modifiers);

    public partial struct retro_keyboard_callback
    {
        [NativeTypeName("retro_keyboard_event_t")]
        public IntPtr callback;
    }

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate bool retro_set_eject_state_t(bool ejected);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate bool retro_get_eject_state_t();

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    [return: NativeTypeName("unsigned int")]
    public delegate uint retro_get_image_index_t();

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate bool retro_set_image_index_t([NativeTypeName("unsigned int")] uint index);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    [return: NativeTypeName("unsigned int")]
    public delegate uint retro_get_num_images_t();

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public unsafe delegate bool retro_replace_image_index_t([NativeTypeName("unsigned int")] uint index, [NativeTypeName("const struct retro_game_info *")] retro_game_info* info);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate bool retro_add_image_index_t();

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public unsafe delegate bool retro_set_initial_image_t([NativeTypeName("unsigned int")] uint index, [NativeTypeName("const char *")] sbyte* path);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public unsafe delegate bool retro_get_image_path_t([NativeTypeName("unsigned int")] uint index, [NativeTypeName("char *")] sbyte* path, [NativeTypeName("size_t")] UIntPtr len);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public unsafe delegate bool retro_get_image_label_t([NativeTypeName("unsigned int")] uint index, [NativeTypeName("char *")] sbyte* label, [NativeTypeName("size_t")] UIntPtr len);

    public partial struct retro_disk_control_callback
    {
        [NativeTypeName("retro_set_eject_state_t")]
        public IntPtr set_eject_state;

        [NativeTypeName("retro_get_eject_state_t")]
        public IntPtr get_eject_state;

        [NativeTypeName("retro_get_image_index_t")]
        public IntPtr get_image_index;

        [NativeTypeName("retro_set_image_index_t")]
        public IntPtr set_image_index;

        [NativeTypeName("retro_get_num_images_t")]
        public IntPtr get_num_images;

        [NativeTypeName("retro_replace_image_index_t")]
        public IntPtr replace_image_index;

        [NativeTypeName("retro_add_image_index_t")]
        public IntPtr add_image_index;
    }

    public partial struct retro_disk_control_ext_callback
    {
        [NativeTypeName("retro_set_eject_state_t")]
        public IntPtr set_eject_state;

        [NativeTypeName("retro_get_eject_state_t")]
        public IntPtr get_eject_state;

        [NativeTypeName("retro_get_image_index_t")]
        public IntPtr get_image_index;

        [NativeTypeName("retro_set_image_index_t")]
        public IntPtr set_image_index;

        [NativeTypeName("retro_get_num_images_t")]
        public IntPtr get_num_images;

        [NativeTypeName("retro_replace_image_index_t")]
        public IntPtr replace_image_index;

        [NativeTypeName("retro_add_image_index_t")]
        public IntPtr add_image_index;

        [NativeTypeName("retro_set_initial_image_t")]
        public IntPtr set_initial_image;

        [NativeTypeName("retro_get_image_path_t")]
        public IntPtr get_image_path;

        [NativeTypeName("retro_get_image_label_t")]
        public IntPtr get_image_label;
    }

    public enum retro_pixel_format
    {
        RETRO_PIXEL_FORMAT_0RGB1555 = 0,
        RETRO_PIXEL_FORMAT_XRGB8888 = 1,
        RETRO_PIXEL_FORMAT_RGB565 = 2,
        RETRO_PIXEL_FORMAT_UNKNOWN = 2147483647,
    }

    public unsafe partial struct retro_message
    {
        [NativeTypeName("const char *")]
        public sbyte* msg;

        [NativeTypeName("unsigned int")]
        public uint frames;
    }

    public enum retro_message_target
    {
        RETRO_MESSAGE_TARGET_ALL = 0,
        RETRO_MESSAGE_TARGET_OSD,
        RETRO_MESSAGE_TARGET_LOG,
    }

    public enum retro_message_type
    {
        RETRO_MESSAGE_TYPE_NOTIFICATION = 0,
        RETRO_MESSAGE_TYPE_NOTIFICATION_ALT,
        RETRO_MESSAGE_TYPE_STATUS,
        RETRO_MESSAGE_TYPE_PROGRESS,
    }

    public unsafe partial struct retro_message_ext
    {
        [NativeTypeName("const char *")]
        public sbyte* msg;

        [NativeTypeName("unsigned int")]
        public uint duration;

        [NativeTypeName("unsigned int")]
        public uint priority;

        [NativeTypeName("enum retro_log_level")]
        public retro_log_level level;

        [NativeTypeName("enum retro_message_target")]
        public retro_message_target target;

        [NativeTypeName("enum retro_message_type")]
        public retro_message_type type;

        [NativeTypeName("int8_t")]
        public sbyte progress;
    }

    public unsafe partial struct retro_input_descriptor
    {
        [NativeTypeName("unsigned int")]
        public uint port;

        [NativeTypeName("unsigned int")]
        public uint device;

        [NativeTypeName("unsigned int")]
        public uint index;

        [NativeTypeName("unsigned int")]
        public uint id;

        [NativeTypeName("const char *")]
        public sbyte* description;
    }

    public unsafe partial struct retro_system_info
    {
        [NativeTypeName("const char *")]
        public sbyte* library_name;

        [NativeTypeName("const char *")]
        public sbyte* library_version;

        [NativeTypeName("const char *")]
        public sbyte* valid_extensions;

        public bool need_fullpath;

        public bool block_extract;
    }

    public partial struct retro_game_geometry
    {
        [NativeTypeName("unsigned int")]
        public uint base_width;

        [NativeTypeName("unsigned int")]
        public uint base_height;

        [NativeTypeName("unsigned int")]
        public uint max_width;

        [NativeTypeName("unsigned int")]
        public uint max_height;

        public float aspect_ratio;
    }

    public partial struct retro_system_timing
    {
        public double fps;

        public double sample_rate;
    }

    public partial struct retro_system_av_info
    {
        [NativeTypeName("struct retro_game_geometry")]
        public retro_game_geometry geometry;

        [NativeTypeName("struct retro_system_timing")]
        public retro_system_timing timing;
    }

    public unsafe partial struct retro_variable
    {
        [NativeTypeName("const char *")]
        public sbyte* key;

        [NativeTypeName("const char *")]
        public sbyte* value;
    }

    public unsafe partial struct retro_core_option_display
    {
        [NativeTypeName("const char *")]
        public sbyte* key;

        public bool visible;
    }

    public unsafe partial struct retro_core_option_value
    {
        [NativeTypeName("const char *")]
        public sbyte* value;
